--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -162,6 +162,9 @@
           </property>
           <item>
            <widget class="QPushButton" name="pushButtonCoinControl">
+		    <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="styleSheet">
              <string notr="true"/>
             </property>
