--- a/src/qt/res/css/Dark.css
+++ b/src/qt/res/css/Dark.css
@@ -84,6 +84,11 @@ QDialog {
   font-style: italic;
   padding-left: 52px;
 }
+#blockCount {
+  font-size: 11px;
+  font-style: italic;
+  padding-left: 68px;
+}
 
 QDialog .QTabWidget QTabBar::tab {
   background-color:#FFFFFF;
