--- a/src/qt/forms/lockdialog.ui
+++ b/src/qt/forms/lockdialog.ui
@@ -37,9 +37,7 @@
         <number>3</number>
        </property>
        <property name="text">
-        <string>Would you like to lock your keychain wallet now?
-
-(Staking will also be stopped)</string>
+        <string>Would you like to lock your keychain wallet now?</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
